layout issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 .section-container {
-  @apply container px-2 smallMobile:px-5 mx-auto   smallTablet:max-w-2xl largeTablet:max-w-3xl  smallDekstop:max-w-4xl laptop:max-w-6xl largeDekstop:max-w-7xl;
+  @apply container px-2 smallMobile:px-5 smallTablet:mx-auto    smallTablet:max-w-2xl largeTablet:max-w-3xl  smallDekstop:max-w-4xl laptop:max-w-6xl largeDekstop:max-w-7xl;
 }
 
 .cart-container {
-  @apply container px-2 mx-auto  smallTablet:max-w-2xl largeTablet:max-w-3xl  smallDekstop:max-w-4xl laptop:max-w-6xl largeDekstop:max-w-7xl smallTablet:px-5 smallDekstop:px-10;
+  @apply container px-2 smallTablet:mx-auto   smallTablet:max-w-2xl largeTablet:max-w-3xl  smallDekstop:max-w-4xl laptop:max-w-6xl largeDekstop:max-w-7xl smallTablet:px-5 smallDekstop:px-10;
 }
 
 .small-main-menu-container {
-  @apply container px-2 smallMobile:px-5 mx-auto smallTablet:max-w-2xl largeTablet:max-w-3xl  smallDekstop:max-w-4xl;
+  @apply container px-2 smallMobile:px-5 smallTablet:mx-auto  smallTablet:max-w-2xl largeTablet:max-w-3xl  smallDekstop:max-w-4xl;
 }
 
 .large-main-menu-container {
-  @apply laptop:container laptop:mx-auto  laptop:max-w-4xl largeDekstop:max-w-5xl ;
+  @apply laptop:container laptop:smallTablet:mx-auto   laptop:max-w-4xl largeDekstop:max-w-5xl ;
 }
